# chronicaria.github.io

./: .gitignore  404.html  CNAME  README.md  README_basketball_site_generator.md  README_basketball_site_generator_v3.md  TRADE-IDEAS-2030-day12.md  basketball_site_generator.py  basketball_site_generator_v3.py  classics.html  compare.html  daily.xml  depth.csv  draft.html  free-agency.html  history.html  index.html  lineup.html  literature.html  manifest.json  music.html  projections.html  records.html  rivalries.html  robots.txt  schedule.html  simulator.html  sitemap.xml  sports.html  sw.js  trade.html  weather.html  wrapped.html
.claude/: launch.json
assets/: app-data.json  daily.css  daily.js  literature.js  music.js  now.js  search-index.json  site.js  sports.js  styles.css  ui.js  weather.js
daily/: ai.html  archive.html  elections.html  index.html  markets.html  math.html  sports.html
data/: README.md  books.json  holdings.json  jupiter.json  music.json  sports.json  weather-hourly.json  weather.json
docs/: compare.html  draft.html  free-agency.html  history.html  index.html  records.html  schedule.html  scores.html  trade.html
games/: 225.html  226.html  227.html  228.html  229.html  230.html  231.html  232.html  233.html  234.html  235.html  (+907 more)
tools/county-temp-map/: README.md  pyproject.toml
tools/county-temp-map/src/county_temp_map/: __init__.py  __main__.py  cli.py  config.py  download.py  geometry.py  palette.py  rtma.py  svg_render.py  workflow.py
tools/county-temp-map/tests/: test_geometry.py  test_palette.py  test_rtma.py  test_svg_render.py
(+3957 files in other folders)
