[project]
name = "county-temp-map"
version = "0.1.0"
description = "Generate a current US county temperature map from NOAA RTMA data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "click>=8.1.8",
    "exactextract>=0.2.0",
    "geopandas>=1.0.1",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
county-temp-map = "county_temp_map.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
